# nectar

./: .gitignore  CHANGELOG.md  CLA.md  Cargo.toml  LICENSE  README.md  RELEASING.md  app.js  bmt-wasm-demo.js  bmt-wasm-demo_bg.wasm  cliff.toml  clippy.toml  deny.toml  flake.nix  index.html  release.toml  test_b256.rs  zepter.yaml
benches-intrinsic/: Cargo.toml
benches-intrinsic/benches/: file.rs  file_encrypted.rs  file_latency.rs  file_random.rs  manifest.rs
benches-intrinsic/src/: corpus.rs  delay.rs  file_api.rs  lib.rs  manifest_api.rs  results.rs  store.rs
crates/benches/: Cargo.toml
crates/benches/benches/: address.rs  bmt_bench.rs  encryption_bench.rs  latency_bench.rs  mantaray_bench.rs  primitives.rs  proofs.rs  sign.rs  upload_pipeline.rs  verify.rs
crates/benches/src/: lib.rs
crates/clock/: Cargo.toml  README.md
crates/clock/src/: lib.rs  manual.rs  system.rs
crates/contracts/: Cargo.toml  README.md
crates/contracts/examples/: dump_deployments.rs
crates/contracts/src/: lib.rs
crates/examples/: Cargo.toml
crates/examples/examples/: basic_usage.rs  builder_patterns.rs  dump_deployments.rs  roam_between_machines.rs
crates/examples/src/: lib.rs
crates/feeds/: Cargo.toml  README.md
crates/feeds/src/: epoch.rs  error.rs  feed.rs  generators.rs  getter.rs  index.rs  lib.rs  reader.rs  sequence.rs  topic.rs  update.rs  updater.rs  writer.rs
crates/feeds/tests/: epoch_vectors.rs  feed_roundtrip.rs  sequence_vectors.rs
crates/file/: Cargo.toml  README.md  build.rs
crates/file/benches/: latency_bench.rs
crates/file/src/: config.rs  generators.rs  geometry.rs  inflight.rs  lib.rs  num.rs  oracles.rs  store.rs  sync.rs  testutil.rs
crates/file/tests/: alloc_probe.rs  membound.rs  plain_alloc_probe.rs  split_membound.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/manifest/: Cargo.toml  README.md
crates/manifest-proof/: Cargo.toml  README.md
crates/manifest-proof/src/: counted.rs  descent.rs  error.rs  lib.rs  proof.rs  prove.rs  range.rs  transition.rs  verify.rs
crates/manifest-proof/tests/: compositions.rs  counted.rs  roundtrip.rs  solidity_fixtures.rs
crates/manifest-sim/: Cargo.toml
crates/manifest-sim/benches/: manifest_perf.rs
crates/manifest-sim/src/: corpus.rs  criterion_fold.rs  lib.rs  measure.rs  perf_v3.rs  results.rs  results_v3.rs  store.rs  store02.rs
crates/manifest/proptest-regressions/: generators.txt
crates/manifest/src/: apply.rs  bounded.rs  builder.rs  codec.rs  count.rs  dx.rs  encryption.rs  error.rs  folder.rs  fork.rs  format.rs  generators.rs  lib.rs  meta.rs  node.rs  oracles.rs  order.rs  packing.rs  reader.rs  scan.rs  store.rs  traverse.rs  value.rs
crates/manifest/tests/: apply.proptest-regressions  apply.rs  bridge.rs  builder.rs  conformance.rs  counted.rs  determinism.rs  membound.rs  order.rs  read_profile.rs  reader.rs  scan.rs
crates/mantaray/: Cargo.toml  README.md
crates/mantaray/benches/: mantaray_bench.rs
crates/mantaray/src/: builder.rs  codec.rs  constants.rs  cursor.rs  editor.rs  entry.rs  error.rs  format.rs  lib.rs  manifest.rs  manifest_ref.rs  marshal.rs  mode.rs  node.rs  obfuscation.rs  oracles.rs  persist.rs  reader.rs  view.rs  walker.rs
crates/mantaray/tests/: file_manifest_integration.rs  legacy_differential.rs
crates/marker/: Cargo.toml  README.md
crates/marker/src/: lib.rs
crates/nostd-spike/: Cargo.toml
crates/nostd-spike/src/: lib.rs
crates/postage/: Cargo.toml  README.md
crates/postage-issuer/: Cargo.toml  README.md
crates/postage-issuer/benches/: sign.rs  upload_pipeline.rs
crates/postage-issuer/src/: counter.rs  dilute_handler.rs  error.rs  factory.rs  issuer.rs  lib.rs  prepared.rs  ring.rs  sharded.rs  sharded_ring.rs  stamper.rs
crates/postage-issuer/tests/: non_mainnet.rs
crates/postage-usage/: Cargo.toml  README.md
crates/postage-usage/examples/: roam_between_machines.rs
crates/postage-usage/src/: client.rs  codec.rs  error.rs  issuer.rs  lib.rs  oracles.rs  seal.rs  snapshot.rs  table.rs
crates/postage-usage/tests/: issuer.rs  seal.rs  snapshot.rs  vector.rs
crates/postage/benches/: stamp.rs  verify.rs
crates/postage/examples/: memory_comparison.rs
crates/postage/src/: batch.rs  error.rs  events.rs  factory.rs  generators.rs  issuer.rs  lib.rs  oracles.rs  parallel.rs  snapshot_store.rs  stamp.rs  stamped.rs  stamper.rs  store.rs  streaming.rs  util.rs  validation.rs
crates/primitives/: Cargo.toml  README.md  build.rs
crates/primitives/benches/: address.rs  bmt_bench.rs  encryption_bench.rs  file_bench.rs  primitives.rs  proofs.rs
crates/primitives/examples/: basic_usage.rs  builder_patterns.rs
crates/primitives/src/: address.rs  bin.rs  cache.rs  cast.rs  ecies.rs  entry_ref.rs  error.rs  generators.rs  lib.rs  marker.rs  neighborhood_depth.rs  network_id.rs  nonce.rs  oracles.rs  overlay.rs  proximity_order.rs  redistribution.rs  signing.rs  spec.rs  timestamp.rs  wasm.rs  wire.rs  xor_metric.rs
crates/swarms/: Cargo.toml  README.md
crates/swarms/src/: lib.rs  named.rs  swarm.rs
crates/testing/: Cargo.toml
crates/testing/src/: alloc.rs  fixtures.rs  lib.rs  seeds.rs
crates/testing/tests/: wasm_smoke.rs
crates/wasm-demo/: CLAUDE.md  Cargo.toml
crates/wasm-demo/.cargo/: config.toml
crates/wasm-demo/src/: lib.rs
crates/wasm-demo/www/: index.html  serve.py
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: chunk_decode.rs  chunk_domain_separation.rs  chunk_roundtrip.rs  file_join_differential.rs  file_malformed_intermediate.rs  file_reader_seek.rs  file_split_root.rs  manifest_apply_rebuild.rs  manifest_build_roundtrip.rs  manifest_node_decode.rs  mantaray_editor_differential.rs  mantaray_node_decode.rs  mantaray_node_roundtrip.rs  mantaray_record_roundtrip.rs  mantaray_view_differential.rs  stamp_decode.rs  stamp_roundtrip.rs  usage_snapshot_decode.rs  usage_snapshot_roundtrip.rs
fuzz/seeds/chunk_roundtrip/: cac-baseline
fuzz/seeds/mantaray_editor_differential/: prefix-prune-remove  root-doc-remove-slash  (+2 more)
fuzz/src/: lib.rs
(+188 files in other folders)
