[workspace]
members = ["crates/*", "crates/**/examples/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["Nexum Contributors"]
license = "AGPL-3.0-or-later"
homepage = "https://nxm-rs.github.io/nectar"
repository = "https://github.com/nxm-rs/nectar"
exclude = ["benches/", "tests/"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.metadata.rust-analyzer]
check.all_targets = true

[workspace.dependencies]
# nectar crates
nectar-contracts = { version = "0.1.0", path = "crates/contracts" }
nectar-mantaray = { version = "0.1.0", path = "crates/mantaray" }
nectar-primitives = { version = "0.1.0", path = "crates/primitives" }
nectar-swarms = { version = "0.1.0", path = "crates/swarms" }
nectar-postage = { version = "0.1.0", path = "crates/postage" }
nectar-postage-issuer = { version = "0.1.0", path = "crates/postage-issuer" }

# alloy
alloy-primitives = { version = "1.6", default-features = false }
alloy-sol-types = { version = "1.6", default-features = false }
alloy-contract = { version = "2.0", default-features = false }
alloy-chains = { version = "0.2.30", default-features = false }
alloy-signer = { version = "2.0", default-features = false }
alloy-signer-local = { version = "2.0", default-features = false }

# k256 with precomputed tables for faster ECDSA
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "precomputed-tables", "std"] }

# hashing
digest = "0.11"
hybrid-array = { version = "0.4", features = ["extra-sizes"] }

# derive macros
derive_more = { version = "2.1", default-features = false, features = ["display", "from", "into", "as_ref"] }

# enums
strum = { version = "0.28", default-features = false, features = ["derive"] }
num_enum = { version = "0.7", default-features = false }

# sync
parking_lot = "0.12"

# concurrency and parallelism
rayon = "1.10"

# Core dependencies
bytes = { version = "1.11", default-features = false }
byteorder = { version = "1.5", default-features = false }
thiserror = { version = "2.0", default-features = false }
once_cell = { version = "1.21", default-features = false, features = [
    "critical-section",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# For tests and examples
arbitrary = "1.4"
criterion = { package = "codspeed-criterion-compat", version = "2.10.1" }
proptest = "1"
proptest-arbitrary-interop = "0.1"
proptest-derive = "0.5"
rand = "0.10"
tokio = { version = "1", features = ["rt", "macros"] }
futures = "0.3"

# wasm
wasm-bindgen = "0.2"
wasm-bindgen-rayon = "1.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
# getrandom 0.2 needed for transitive deps (rand_core 0.6 via k256/elliptic-curve)
getrandom_02 = { package = "getrandom", version = "0.2", default-features = false, features = ["js"] }
# getrandom 0.4 needed for alloy-primitives 1.x random helpers on wasm; the
# "wasm_js" feature selects the browser backend so B256::random links on wasm32.
getrandom_04 = { package = "getrandom", version = "0.4", default-features = false, features = ["wasm_js"] }
bitflags = { version = "2", default-features = false }
subtle = "2"
zeroize = "1"

[profile.release]
lto = "thin"
