[package]
name = "nectar-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
# `default-features = false` matches the parent workspace; the crate is
# already in the graph transitively, this only names it for `Address`.
alloy-primitives = { version = "1.6", default-features = false }
arbitrary = { version = "1", features = ["derive"] }
alloy-signer-local = { version = "2.0", default-features = false }
# Chunk wire payloads are `Bytes`; the chunk targets build them from the
# fuzzer's raw input.
bytes = "1"
libfuzzer-sys = "0.4"
# The streaming file pipeline under test: read facade, reader and split
# engine driven for split-then-read consistency.
nectar-file = { path = "../crates/file" }
# The mantaray 1.0 manifest codec, builder and apply path under test.
nectar-manifest = { path = "../crates/manifest" }
# No `encryption` feature: the `EncryptedChunkRef` representation the
# mantaray targets drive for the 64-byte entry path is unconditional.
# `hazmat` exposes the raw node types and codec the mantaray targets
# exercise.
nectar-mantaray = { path = "../crates/mantaray", features = [
	"arbitrary",
	"hazmat",
] }
nectar-postage = { path = "../crates/postage", features = ["arbitrary"] }
nectar-postage-usage = { path = "../crates/postage-usage", features = [
	"arbitrary",
] }
nectar-primitives = { path = "../crates/primitives", features = ["arbitrary"] }
# The sanctioned executor entry point the targets drive futures to completion
# with.
nectar-testing = { path = "../crates/testing" }

[[bin]]
name = "mantaray_node_decode"
path = "fuzz_targets/mantaray_node_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "chunk_decode"
path = "fuzz_targets/chunk_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "stamp_decode"
path = "fuzz_targets/stamp_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "usage_snapshot_decode"
path = "fuzz_targets/usage_snapshot_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mantaray_node_roundtrip"
path = "fuzz_targets/mantaray_node_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "chunk_roundtrip"
path = "fuzz_targets/chunk_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "stamp_roundtrip"
path = "fuzz_targets/stamp_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "usage_snapshot_roundtrip"
path = "fuzz_targets/usage_snapshot_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mantaray_record_roundtrip"
path = "fuzz_targets/mantaray_record_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "chunk_domain_separation"
path = "fuzz_targets/chunk_domain_separation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "manifest_node_decode"
path = "fuzz_targets/manifest_node_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "manifest_build_roundtrip"
path = "fuzz_targets/manifest_build_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "manifest_apply_rebuild"
path = "fuzz_targets/manifest_apply_rebuild.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mantaray_view_differential"
path = "fuzz_targets/mantaray_view_differential.rs"
test = false
doc = false
bench = false

[[bin]]
name = "file_join_differential"
path = "fuzz_targets/file_join_differential.rs"
test = false
doc = false
bench = false

[[bin]]
name = "file_reader_seek"
path = "fuzz_targets/file_reader_seek.rs"
test = false
doc = false
bench = false

[[bin]]
name = "file_split_root"
path = "fuzz_targets/file_split_root.rs"
test = false
doc = false
bench = false

[[bin]]
name = "file_malformed_intermediate"
path = "fuzz_targets/file_malformed_intermediate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mantaray_editor_differential"
path = "fuzz_targets/mantaray_editor_differential.rs"
test = false
doc = false
bench = false

# Make arithmetic overflow and debug_assert! act as fuzz oracles even in the
# optimised builds cargo-fuzz produces.
[profile.release]
overflow-checks = true
debug-assertions = true

# Self-contained workspace root: keeps the parent workspace (whose member
# globs are crates/*) from ever trying to build the nightly-only fuzz crate.
[workspace]
resolver = "2"
