[package]
name = "nectar-file"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Streaming file pipeline for Ethereum Swarm: bounded chunk-tree reads and writes"
documentation = "https://docs.rs/nectar-file"
readme = "README.md"
keywords = ["swarm", "ethereum", "file", "streaming", "no_std"]
categories = ["no-std", "asynchronous", "data-structures"]

[lints]
workspace = true

[dependencies]
bytes = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
nectar-primitives = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"], optional = true }

[dev-dependencies]
axum.workspace = true
futures.workspace = true
http-body-util.workspace = true
# The differential oracles split and join through the legacy read paths,
# including the encrypted width.
nectar-primitives = { workspace = true, features = ["std", "encryption"] }
tokio = { workspace = true, features = ["io-util"] }
tokio-util.workspace = true
tower.workspace = true

[features]
default = [ "std" ]

# Standard library interop; the filesystem and io adapters land with the
# write engine. The walk engine rides this feature until the primitives core
# builds bare-metal.
std = [
	"bytes?/std",
	"dep:bytes",
	"dep:futures-util",
	"dep:nectar-primitives",
	"futures-util?/std",
	"nectar-primitives?/std",
	"thiserror/std",
]

# Async reader and writer adapters over the poll surface. Implies `std`.
tokio = [ "dep:tokio", "std" ]

# Batch leaf hashing and read-at ingest. Implies `std`; rayon on wasm32 or
# under `unsync` is a compile error, never a silent fallback.
rayon = [ "dep:rayon", "std" ]

# Split-side encrypted mode. Joining encrypted references stays unconditional.
encryption = [ "nectar-primitives?/encryption" ]

# Single-thread send escape: relaxes the boxed fetch future off `Send` in
# lockstep with the primitives store traits.
unsync = [ "nectar-primitives?/unsync" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
