[package]
name = "nectar-file"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Streaming file pipeline for Ethereum Swarm: bounded chunk-tree reads and writes"
documentation = "https://docs.rs/nectar-file"
readme = "README.md"
keywords = ["swarm", "ethereum", "file", "streaming", "no_std"]
categories = ["no-std", "asynchronous", "data-structures"]

[lints]
workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
futures-channel = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
nectar-primitives = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"], optional = true }

[build-dependencies]

[dev-dependencies]
# The seed replay decodes committed fuzz inputs through the same grammar the
# fuzzer uses.
arbitrary.workspace = true
futures.workspace = true
proptest.workspace = true
# The manifest-edit exhibit publishes a file root under a path.
nectar-mantaray.workspace = true
# The oracle stores and chunk fixtures ride the primitives store surface,
# including the encrypted reference width.
nectar-primitives = { workspace = true, features = ["arbitrary", "encryption", "std"] }
nectar-testing = { workspace = true, features = ["alloc", "fixtures"] }
tokio = { workspace = true, features = ["io-util", "time"] }

[features]
default = [ "std" ]

# Standard library interop; the filesystem and io adapters land with the
# write engine. The walk engine rides this feature until the primitives core
# builds bare-metal.
std = [
	"bytes?/std",
	"dep:bytes",
	"dep:futures-util",
	"dep:nectar-primitives",
	"futures-util?/std",
	"nectar-primitives?/std",
	"thiserror/std",
]

# Async reader and writer adapters over the poll surface. Implies `std`.
tokio = [ "dep:tokio", "std" ]

# Pool leaf hashing: the split hash window and the read-at ingest. Implies
# `std`; rayon on wasm32 or under `unsync` is a compile error, never a
# silent fallback.
rayon = [ "dep:futures-channel", "dep:rayon", "std" ]

# The shared malformed-walk oracle, the structural-regime body generators
# and the stable seed replays. Never reachable from `default` or any
# shipped feature.
arbitrary = [ "dep:arbitrary", "nectar-primitives?/arbitrary", "std" ]

# Split-side encrypted mode. Joining encrypted references stays unconditional.
encryption = [ "nectar-primitives?/encryption" ]

# Single-thread send escape: relaxes the boxed fetch future off `Send` in
# lockstep with the primitives store traits.
unsync = [ "nectar-primitives?/unsync" ]

# `rayon` and `unsync` are mutually exclusive, so the doc build lists
# features explicitly rather than enabling all at once.
[package.metadata.docs.rs]
features = ["std", "tokio", "rayon", "encryption", "arbitrary"]
rustdoc-args = ["--cfg", "docsrs"]
